# X8RL1-pico

./: .gitignore  CMakeLists.txt  README.md
host/: receiver.py  x8rl1-pico.py
src/: cz8rl1.c  cz8rl1.h  main.c  pins.h  sampler.c  sampler.h  timing.c  timing.h  usb_stream.c  usb_stream.h
